samples/_failures_safe/1761357222_853e22_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c8cb06e.c: In function ‘display_entries_by_level’:
./samples/SAFE/__tmp_3c8cb06e.c:125:42: error: missing terminating " character
  125 |     else if (severity == 2) level_name = "WARN
      |                                          ^~~~~
./samples/SAFE/__tmp_3c8cb06e.c:125:5: error: expected expression at end of input
  125 |     else if (severity == 2) level_name = "WARN
      |     ^~~~
./samples/SAFE/__tmp_3c8cb06e.c:125:5: error: expected declaration or statement at end of input
